plugins {
	id 'idea'
	id 'jacoco'
	id 'java'

	id 'org.springframework.boot'

	id 'com.diffplug.spotless'
	id 'com.github.ben-manes.versions' version '0.39.0'
	id 'com.github.spotbugs' version '4.7.3'
	id 'com.google.cloud.tools.jib' version '3.1.2'
	id 'com.gorylenko.gradle-git-properties' version '2.3.1'
	id 'io.freefair.lombok'
	id 'org.hidetake.swagger.generator'
}

compileJava { options.release = 11 }

repositories {
	mavenCentral()
	maven { url 'https://broadinstitute.jfrog.io/artifactory/libs-snapshot' }
	maven { url 'https://broadinstitute.jfrog.io/artifactory/libs-release' }
}

apply from: 'publishing.gradle'
apply from: 'spring.gradle'
apply from: 'generators.gradle'
apply from: 'tooling.gradle'
apply from: 'analysis.gradle'

dependencies {
	// google
	implementation platform('com.google.cloud:libraries-bom:22.0.0')
	implementation 'com.google.cloud:google-cloud-pubsub'

	implementation 'org.skyscreamer:jsonassert:1.5.0'

	annotationProcessor 'org.immutables:value:2.8.8'
	implementation 'bio.terra:terra-common-lib:0.0.49-SNAPSHOT'
	implementation 'org.broadinstitute.dsde.workbench:sam-client_2.13:0.1-fa74f75'

	// for testing with mock web server
	testImplementation 'org.mock-server:mockserver-netty:5.11.2'
}
